--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,12 +4,20 @@
   "sharedPrivateKey": "Private Key",
   "sharedAccessWallet": "Access Wallet",
   "sharedCancel": "Cancel",
+  "sharedConfirm": "Confirm",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
+  "accessWalletOptionsKeystoreFile": "Keystore File",
   "accessWalletOptionsDontHaveWallet": "Don’t have a wallet?",
   "accessPrivateKeyYourPrivateKey": "Your Private Key",
   "accessPrivateKeyYourPrivateKeyHint": "Type your private key",
+  "accessPrivateKeyWarning": "Invalid Private Key",
   "accessMnemonicKeyTitle": "Mnemonic Key Phrase",
-  "accessMnemonicKeyDes": "Hit ‘SPACE’ after every successful word entry."
+  "accessMnemonicKeyDes": "Hit ‘SPACE’ after every successful word entry.",
+  "accessMnemonicKeyWarning": "Invalid mnemonic phrase. Make sure your mnemonic is all lowercase.",
+  "createWalletPassphraseToRestore": "Passphrase to restore",
+  "createWalletKeptKey": "Yes, I kept them  safe",
+  "createWalletDes": "Store this key phrase in a secure location. Anyone with this key phrase can access your ROIChain wallet. there is no way to recover lost key phrase",
+  "createWalletConfirmDes": "Confirm your passphrase backup"
 }
