--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,6 +5,9 @@
   "sharedAccessWallet": "Access Wallet",
   "sharedCancel": "Cancel",
   "sharedConfirm": "Confirm",
+  "sharedROIChain": "ROI Chain",
+  "sharedToken": "Token",
+  "sharedBalance": "Balance",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
