update dashboard wallet

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,6 +8,13 @@
   "sharedROIChain": "ROI Chain",
   "sharedToken": "Token",
   "sharedBalance": "Balance",
+  "sharedXChain": "X chain",
+  "sharedPChain": "P chain",
+  "sharedCChain": "C chain",
+  "sharedSend": "Send",
+  "sharedReceive": "Receive",
+  "sharedAvailable": "Available",
+  "sharedLock": "Lock",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
