--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -15,6 +15,8 @@
   "sharedReceive": "Receive",
   "sharedAvailable": "Available",
   "sharedLock": "Lock",
+  "sharedCopy": "Copy",
+  "sharedShare": "Share",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
@@ -42,5 +44,9 @@
   "settingWalletSecurity": "Wallet Security",
   "settingGeneral": "General Setting",
   "settingAboutRoi": "About Roi Chain",
-  "settingTouchId": "Touch ID"
+  "settingTouchId": "Touch ID",
+  "walletReceiveSendOnly": "Send only ",
+  "walletReceiveBitcoin": "Bitcoin(BTC)",
+  "walletReceiveToThis": " to this address\nSending any other coins my result in permanent loss",
+  "walletReceiveSetAmount": "Set Amount"
 }
