--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -65,5 +65,6 @@
   "walletSendGasGWEI": "GWEI",
   "walletSendGasPriceNote": "Adjusted automatically according to network load.",
   "walletSendGasLimit": "Gas Limit",
-  "walletSendGasLimitNote": "Gas Limit will be automatically calculated after you click Confirm."
+  "walletSendGasLimitNote": "Gas Limit will be automatically calculated after you click Confirm.",
+  "walletSendCChainErrorAddress": "Invalid C Chain address. Make sure your address begins with \"0x\" or \"C-0x\""
 }
