--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -55,6 +55,9 @@
   "settingGeneral": "General Setting",
   "settingAboutRoi": "About Roi Chain",
   "settingTouchId": "Touch ID",
+  "settingEnterOldPin": "Please enter old PIN",
+  "settingEnterNewPin": "Please enter new PIN",
+  "settingConfirmNewPin": "Please confirm new PIN",
   "walletReceiveSendOnly": "Send only ",
   "walletReceiveBitcoin": "Bitcoin(BTC)",
   "walletReceiveToThis": " to this address\nSending any other coins my result in permanent loss",
