--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -27,6 +27,8 @@
   "sharedStartAgain": "Start Again",
   "sharedMemo": "Memo",
   "sharedPasteAddress": "Paste Address",
+  "sharedLanguage": "Language",
+  "sharedCurrency": "Currency",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
@@ -53,13 +55,15 @@
   "settingChangePin": "Change PIN",
   "settingWalletSecurity": "Wallet Security",
   "settingGeneral": "General Setting",
-  "settingAboutRoi": "About Roi Chain",
+  "settingAboutRoi": "About RoiChain",
   "settingTouchId": "Touch ID",
   "settingEnterOldPin": "Please enter old PIN",
   "settingEnterNewPin": "Please enter new PIN",
   "settingConfirmNewPin": "Please confirm new PIN",
   "settingOldPinWrong": "PIN Code Wrong!",
   "settingConfirmNewPinWrong": "PIN Code doesn’t match!",
+  "settingGeneralDeactivateAccount": "Deactivate Account",
+  "settingGeneralRemoveWallet": "Remove Wallet",
   "walletReceiveSendOnly": "Send only ",
   "walletReceiveBitcoin": "Bitcoin(BTC)",
   "walletReceiveToThis": " to this address\nSending any other coins my result in permanent loss",
