--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -29,6 +29,7 @@
   "sharedPasteAddress": "Paste Address",
   "sharedLanguage": "Language",
   "sharedCurrency": "Currency",
+  "sharedPassphrase": "Passphrase",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
@@ -65,6 +66,8 @@
   "settingGeneralDeactivateAccount": "Deactivate Account",
   "settingGeneralRemoveWallet": "Remove Wallet",
   "settingSecurityWalletAddress": "Wallet Address",
+  "settingSecurityPrivateKeyNote": "Never disclose this key. Anyone with your private keys can steal any assets held in your wallet.",
+  "settingSecurityCPrivateKey": "C Chain Private Key",
   "walletReceiveSendOnly": "Send only ",
   "walletReceiveBitcoin": "Bitcoin(BTC)",
   "walletReceiveToThis": " to this address\nSending any other coins my result in permanent loss",
