--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -30,6 +30,7 @@
   "sharedLanguage": "Language",
   "sharedCurrency": "Currency",
   "sharedPassphrase": "Passphrase",
+  "sharedInvalidAddress": "Invalid Address",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
