--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -31,6 +31,7 @@
   "sharedCurrency": "Currency",
   "sharedPassphrase": "Passphrase",
   "sharedInvalidAddress": "Invalid Address",
+  "sharedInvalidAmount": "Invalid Amount",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
@@ -43,7 +44,7 @@
   "accessMnemonicKeyDes": "Hit ‘SPACE’ after every successful word entry.",
   "accessMnemonicKeyWarning": "Invalid mnemonic phrase. Make sure your mnemonic is all lowercase.",
   "createWalletPassphraseToRestore": "Passphrase to restore",
-  "createWalletKeptKey": "Yes, I kept them  safe",
+  "createWalletKeptKey": "Yes, I kept them safe",
   "createWalletDes": "Store this key phrase in a secure location. Anyone with this key phrase can access your ROIChain wallet. there is no way to recover lost key phrase",
   "createWalletConfirmDes": "Confirm your passphrase backup",
   "pinCodeTitle": "PIN code",
@@ -74,6 +75,7 @@
   "walletReceiveToThis": " to this address\nSending any other coins my result in permanent loss",
   "walletReceiveSetAmount": "Set Amount",
   "walletSendMemo": "Memo(optional)",
+  "walletSendBalance": "Balance: {balance}",
   "walletSendGasPrice": "Gas Price",
   "walletSendGasPriceGWEI": "Gas Price (GWEI)",
   "walletSendGasGWEI": "GWEI",
