--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -15,6 +15,7 @@
   "sharedReceive": "Receive",
   "sharedAvailable": "Available",
   "sharedLock": "Lock",
+  "sharedLockStakeable": "Lock Stakeable",
   "sharedCopy": "Copy",
   "sharedShare": "Share",
   "sharedTotal": "Total",
@@ -74,7 +75,7 @@
   "walletReceiveBitcoin": "Bitcoin(BTC)",
   "walletReceiveToThis": " to this address\nSending any other coins my result in permanent loss",
   "walletReceiveSetAmount": "Set Amount",
-  "walletSendMemo": "Memo(optional)",
+  "walletSendMemo": "Memo (optional)",
   "walletSendBalance": "Balance: {balance}",
   "walletSendGasPrice": "Gas Price",
   "walletSendGasPriceGWEI": "Gas Price (GWEI)",
