--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -33,6 +33,8 @@
   "sharedPassphrase": "Passphrase",
   "sharedInvalidAddress": "Invalid Address",
   "sharedInvalidAmount": "Invalid Amount",
+  "sharedSource": "Source",
+  "sharedDestination": "Destination",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
@@ -83,5 +85,6 @@
   "walletSendGasPriceNote": "Adjusted automatically according to network load.",
   "walletSendGasLimit": "Gas Limit",
   "walletSendGasLimitNote": "Gas Limit will be automatically calculated after you click Confirm.",
-  "walletSendCChainErrorAddress": "Invalid C Chain address. Make sure your address begins with \"0x\" or \"C-0x\""
+  "walletSendCChainErrorAddress": "Invalid C Chain address. Make sure your address begins with \"0x\" or \"C-0x\"",
+  "crossFee": "Fee (export + import)"
 }
