--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,11 +1,11 @@
 {
-  "appName": "ROI Wallet",
+  "appName": "EZC Wallet",
   "pageHomeWelcome": "Welcome {name}",
   "sharedPrivateKey": "Private Key",
   "sharedAccessWallet": "Access Wallet",
   "sharedCancel": "Cancel",
   "sharedConfirm": "Confirm",
-  "sharedROIChain": "ROI Chain",
+  "sharedEZChain": "EZChain",
   "sharedToken": "Token",
   "sharedBalance": "Balance",
   "sharedXChain": "X chain",
@@ -54,7 +54,7 @@
   "accessMnemonicKeyWarning": "Invalid mnemonic phrase. Make sure your mnemonic is all lowercase.",
   "createWalletPassphraseToRestore": "Passphrase to restore",
   "createWalletKeptKey": "Yes, I kept them safe",
-  "createWalletDes": "Store this key phrase in a secure location. Anyone with this key phrase can access your ROIChain wallet. there is no way to recover lost key phrase",
+  "createWalletDes": "Store this key phrase in a secure location. Anyone with this key phrase can access your EZChain wallet. there is no way to recover lost key phrase",
   "createWalletConfirmDes": "Confirm your passphrase backup",
   "pinCodeTitle": "PIN code",
   "pinCodeDes": "Set up your PIN code to unlock the wallet, confirm transactions and other activities tha require your permission",
@@ -67,7 +67,7 @@
   "settingChangePin": "Change PIN",
   "settingWalletSecurity": "Wallet Security",
   "settingGeneral": "General Setting",
-  "settingAboutRoi": "About RoiChain",
+  "settingAboutEZC": "About EZChain",
   "settingTouchId": "Touch ID",
   "settingEnterOldPin": "Please enter old PIN",
   "settingEnterNewPin": "Please enter new PIN",
