--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -12,7 +12,9 @@
   "sharedPChain": "P chain",
   "sharedCChain": "C chain",
   "sharedSend": "Send",
+  "sharedSent": "Sent",
   "sharedReceive": "Receive",
+  "sharedReceived": "Received",
   "sharedAvailable": "Available",
   "sharedLock": "Lock",
   "sharedLockStakeable": "Lock Stakeable",
