update transactions ui

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -53,6 +53,10 @@
   "sharedBlockchain": "Blockchain",
   "sharedInput": "Input",
   "sharedOutput": "Output",
+  "sharedSuccess": "Success",
+  "sharedFail": "Fail",
+  "sharedConfirmed": "Confirmed",
+  "sharedNotConfirm": "Not Confirm",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
