update transaction detail ui

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -57,6 +57,7 @@
   "sharedFail": "Fail",
   "sharedConfirmed": "Confirmed",
   "sharedNotConfirm": "Not Confirm",
+  "sharedResult": "Result",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
