--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -66,6 +66,7 @@
   "sharedGasPrice": "Gas Price",
   "sharedGasLimit": "Gas Limit",
   "sharedNonce": "Nonce",
+  "sharedDelegate": "Delegate",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
@@ -131,5 +132,10 @@
   "transactionsTo": "To:",
   "transactionsNoInputs": "No input UTXOs found for this transaction.",
   "transactionsNoOutputs": "No output UTXOs found for this transaction.",
-  "transactionsGasUsedByTransaction": "Gas Used by Transaction"
+  "transactionsGasUsedByTransaction": "Gas Used by Transaction",
+  "earnDelegateDescription": "You do not own an ROIChain node, but you want to stake using another node.",
+  "earnDelegateValidMess": "You must have at least 1 ROI on the P chain to become a validator.",
+  "earnDelegateAdd": "Add Delegator",
+  "earnCrossTransfer": "Cross Chain Transfer",
+  "earnEstimatedRewards": "Estimated Rewards"
 }
