--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -71,6 +71,7 @@
   "sharedNodeId": "Node ID",
   "sharedEndTime": "End Time",
   "sharedSelect": "Select",
+  "sharedValidate": "Validate",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
