--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -48,6 +48,10 @@
   "sharedJustNow": "Just now",
   "sharedMinuteAgo": "{count,plural, =1{1 minute ago} other{{count} minutes ago}}",
   "sharedHourAgo": "{count,plural, =1{1 hour ago} other{{count} hours ago}}",
+  "sharedDateDuration": "{dayCount,plural, =1{1 day} other{{dayCount} days}} {hourCount,plural, =1{1 hour} other{{hourCount} hours}} {minuteCount,plural, =1{1 minute} other{{minuteCount} minutes}}",
+  "sharedDays": "{count,plural, =1{1 day} other{{count} days}}",
+  "sharedHours": "{count,plural, =1{1 hour} other{{count} hours}}",
+  "sharedMinutes": "{count,plural, =1{1 minute} other{{count} minutes}}",
   "sharedValue": "Value",
   "sharedBurned": "Burned",
   "sharedBlockchain": "Blockchain",
