--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -79,6 +79,7 @@
   "sharedStartDate": "Start date",
   "sharedEndDate": "End date",
   "sharedSubmit": "Submit",
+  "sharedCommitted": "Committed",
   "sharedWalletAddress": "Wallet address",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
@@ -149,6 +150,7 @@
   "earnDelegateDescription": "You do not own an ROIChain node, but you want to stake using another node.",
   "earnDelegateValidMess": "You must have at least 1 ROI on the P chain to become a validator.",
   "earnDelegateAdd": "Add Delegator",
+  "earnDelegateBackToEarn": "Back to Earn",
   "earnDelegateConfirmStartDate": "Your validation will start at least 5 minutes after you submit this form.",
   "earnCrossTransfer": "Cross Chain Transfer",
   "earnEstimatedRewards": "Estimated Rewards",
