--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -81,6 +81,8 @@
   "sharedSubmit": "Submit",
   "sharedCommitted": "Committed",
   "sharedWalletAddress": "Wallet address",
+  "sharedStake": "Stake",
+  "sharedPotentialReward": "Potential Reward",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
