--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -52,6 +52,8 @@
   "sharedDays": "{count,plural, =1{1 day} other{{count} days}}",
   "sharedHours": "{count,plural, =1{1 hour} other{{count} hours}}",
   "sharedMinutes": "{count,plural, =1{1 minute} other{{count} minutes}}",
+  "sharedInYears": "{count,plural, =1{in a year} other{in {count} years}}",
+  "sharedInDays": "{count,plural, =1{in a day} other{in {count} days}}",
   "sharedValue": "Value",
   "sharedBurned": "Burned",
   "sharedBlockchain": "Blockchain",
@@ -83,6 +85,7 @@
   "sharedWalletAddress": "Wallet address",
   "sharedStake": "Stake",
   "sharedPotentialReward": "Potential Reward",
+  "sharedCopied": "Copied",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
@@ -153,6 +156,7 @@
   "earnDelegateValidMess": "You must have at least 1 ROI on the P chain to become a validator.",
   "earnDelegateAdd": "Add Delegator",
   "earnDelegateBackToEarn": "Back to Earn",
+  "earnDelegateInvalidEndDate": "Invalid end date",
   "earnDelegateConfirmStartDate": "Your validation will start at least 5 minutes after you submit this form.",
   "earnCrossTransfer": "Cross Chain Transfer",
   "earnEstimatedRewards": "Estimated Rewards",
