--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -87,6 +87,7 @@
   "sharedPotentialReward": "Potential Reward",
   "sharedCopied": "Copied",
   "sharedStaking": "Staking",
+  "sharedCommonError": "Something went wrong, please try again later!",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
@@ -126,7 +127,7 @@
   "settingSecurityPrivateKeyNote": "Never disclose this key. Anyone with your private keys can steal any assets held in your wallet.",
   "settingSecurityCPrivateKey": "C Chain Private Key",
   "walletReceiveSendOnly": "Send only ",
-  "walletReceiveBitcoin": "Bitcoin(BTC)",
+  "walletReceiveBitcoin": "Bitcoin (BTC)",
   "walletReceiveToThis": " to this address\nSending any other coins my result in permanent loss",
   "walletReceiveSetAmount": "Set Amount",
   "walletSendMemo": "Memo (optional)",
@@ -153,7 +154,7 @@
   "transactionsNoInputs": "No input UTXOs found for this transaction.",
   "transactionsNoOutputs": "No output UTXOs found for this transaction.",
   "transactionsGasUsedByTransaction": "Gas Used by Transaction",
-  "earnDelegateDescription": "You do not own an ROIChain node, but you want to stake using another node.",
+  "earnDelegateDescription": "You do not own an EZChain node, but you want to stake using another node.",
   "earnDelegateValidMess": "You must have at least 1 ROI on the P chain to become a validator.",
   "earnDelegateAdd": "Add Delegator",
   "earnDelegateBackToEarn": "Back to Earn",
