--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -126,6 +126,9 @@
   "settingSecurityWalletAddress": "Wallet Address",
   "settingSecurityPrivateKeyNote": "Never disclose this key. Anyone with your private keys can steal any assets held in your wallet.",
   "settingSecurityCPrivateKey": "C Chain Private Key",
+  "settingSwitchNetworks": "Switch Networks",
+  "settingEzcMainnet": "EZChain Mainnet",
+  "settingEzcTestnet": "EZChain Testnet",
   "walletReceiveSendOnly": "Send only ",
   "walletReceiveBitcoin": "Bitcoin (BTC)",
   "walletReceiveToThis": " to this address\nSending any other coins my result in permanent loss",
