--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -159,7 +159,7 @@
   "transactionsNoOutputs": "No output UTXOs found for this transaction.",
   "transactionsGasUsedByTransaction": "Gas Used by Transaction",
   "earnDelegateDescription": "You do not own an EZChain node, but you want to stake using another node.",
-  "earnDelegateValidMess": "You must have at least 1 ROI on the P chain to become a validator.",
+  "earnDelegateValidMess": "You must have at least 1 EZC on the P chain to become a validator.",
   "earnDelegateAdd": "Add Delegator",
   "earnDelegateBackToEarn": "Back to Earn",
   "earnDelegateInvalidEndDate": "Invalid end date",
