update pincode ui

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -88,6 +88,7 @@
   "sharedCopied": "Copied",
   "sharedStaking": "Staking",
   "sharedCommonError": "Something went wrong, please try again later!",
+  "sharedTryAgain": "Please try again",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
@@ -104,6 +105,8 @@
   "createWalletDes": "Store this key phrase in a secure location. Anyone with this key phrase can access your EZChain wallet. there is no way to recover lost key phrase",
   "createWalletConfirmDes": "Confirm your passphrase backup",
   "pinCodeTitle": "PIN code",
+  "pinCodeConfirm": "Confirm your PIN",
+  "pinCodeConfirmWrong": "PIN Code Wrong!",
   "pinCodeDes": "Set up your PIN code to unlock the wallet, confirm transactions and other activities tha require your permission",
   "pinCodeWrong": "PIN Code doesn’t match! Try Again",
   "pinCodeSetNewPin": " or Set new PIN code",
