--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -134,6 +134,7 @@
   "settingEzcMainnet": "EZChain Mainnet",
   "settingEzcTestnet": "EZChain Testnet",
   "settingNetworkConnected": "Network connected",
+  "settingBiometricSystemsNotEnabled": "Biometric systems is not enabled",
   "walletReceiveSendOnly": "Send only ",
   "walletReceiveBitcoin": "Bitcoin (BTC)",
   "walletReceiveToThis": " to this address\nSending any other coins my result in permanent loss",
