--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -44,6 +44,7 @@
   "sharedAccepted": "Accepted",
   "sharedError": "Error",
   "sharedTransaction": "Transaction",
+  "sharedTransactions": "Transactions",
   "sharedTransactionDetail": "Transaction Detail",
   "sharedJustNow": "Just now",
   "sharedMinuteAgo": "{count,plural, =1{1 minute ago} other{{count} minutes ago}}",
