update nft family

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -115,6 +115,7 @@
   "dashboardWallet": "Wallet",
   "dashboardCross": "Cross",
   "dashboardEarn": "Earn",
+  "dashboardNft": "My NFT",
   "dashboardSetting": "Setting",
   "settingChangePin": "Change PIN",
   "settingWalletSecurity": "Wallet Security",
@@ -186,5 +187,23 @@
   "earnUseYourWallet": "Use your wallet",
   "earnDelegateInvalidAddress": "Invalid address. Reward address must be a valid P chain address.",
   "earnTotalRewards": "Total Rewards",
-  "earnDelegation": "Delegation"
+  "earnDelegation": "Delegation",
+  "nftMint": "Mint",
+  "nftNewFamily": "New Family",
+  "nftNewFamilyDesc": "Create a new set of collectibles with a name and symbol.",
+  "nftMintCollectible": "Mint Collectible",
+  "nftMintCollectibleDesc": "You do not own an EZChain node, but you want to stake using another node.",
+  "nftCreateFamily": "Create Family",
+  "nftName": "Name",
+  "nftSymbol": "Symbol",
+  "nftNumberOfGroups": "Number of Groups",
+  "nftTxId": "TxID",
+  "nftStartDate": "Start Date",
+  "nftStartDateDesc": "Sart at least 5 minutes after you submit this form.",
+  "nftFamilyName": "Family Name",
+  "nftBackMyNFT": "Back to My NFT",
+  "nftNameEmptyError": "You must provide a name.",
+  "nftSymbolEmptyError": "You must provide a symbol.",
+  "nftSymbolLengthError": "Symbol must be 4 characters max.",
+  "nftNumberLengthError": "Number of groups must be at least 1."
 }
