update token add

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -91,6 +91,7 @@
   "sharedCommonError": "Something went wrong, please try again later!",
   "sharedTryAgain": "Please try again",
   "sharedCompleteBiometrics": "Please complete the biometrics to proceed.",
+  "sharedNext": "Next",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
@@ -150,6 +151,16 @@
   "walletSendGasLimit": "Gas Limit",
   "walletSendGasLimitNote": "Gas Limit will be automatically calculated after you click Confirm.",
   "walletSendCChainErrorAddress": "Invalid C Chain address. Make sure your address begins with \"0x\" or \"C-0x\"",
+  "walletAddToken": "Add Token",
+  "walletTokenName": "Token Name",
+  "walletTokenContractAddress": "Token Contract Address",
+  "walletTokenSymbol": "Token Symbol",
+  "walletTokenDecimal": "Token Decimal",
+  "walletTokenAddressInvalid": "Invalid address",
+  "walletTokenNameInvalid": "You must provide a name.",
+  "walletTokenSymbolInvalid": "You must provide a symbol.",
+  "walletTokenSymbolLengthInvalid": "Symbol must be 4 characters max.",
+  "walletTokenDecimalInvalid": "You must provide a token decimal.",
   "crossFee": "Fee (export + import)",
   "crossId": "ID:",
   "crossStatus": "Status:",
