update erc20 token

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -156,7 +156,7 @@
   "walletTokenContractAddress": "Token Contract Address",
   "walletTokenSymbol": "Token Symbol",
   "walletTokenDecimal": "Token Decimal",
-  "walletTokenAddressInvalid": "Invalid address",
+  "walletTokenAddressInvalid": "Invalid contract address",
   "walletTokenNameInvalid": "You must provide a name.",
   "walletTokenSymbolInvalid": "You must provide a symbol.",
   "walletTokenSymbolLengthInvalid": "Symbol must be 4 characters max.",
@@ -199,6 +199,7 @@
   "earnDelegateInvalidAddress": "Invalid address. Reward address must be a valid P chain address.",
   "earnTotalRewards": "Total Rewards",
   "earnDelegation": "Delegation",
+  "earnValidatorAddress": "Validator Address ",
   "nftMint": "Mint",
   "nftNewFamily": "New Family",
   "nftNewFamilyDesc": "Create a new set of collectibles with a name and symbol.",
