update empty screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -92,6 +92,8 @@
   "sharedTryAgain": "Please try again",
   "sharedCompleteBiometrics": "Please complete the biometrics to proceed.",
   "sharedNext": "Next",
+  "sharedNoResultFound": "No result found",
+  "sharedNoResultFoundDes": "We can’t find any item matching your search",
   "onBoardCreateWallet": "Create Wallet",
   "accessWalletOptionsTitle": "How do you want to access your wallet?",
   "accessWalletOptionsMnemonic": "Mnemonic Key Phrase",
@@ -162,6 +164,8 @@
   "walletTokenSymbolInvalid": "You must provide a symbol.",
   "walletTokenSymbolLengthInvalid": "Symbol must be 4 characters max.",
   "walletTokenDecimalInvalid": "You must provide a token decimal.",
+  "walletTokenEmpty": "Empty Token",
+  "walletTokenEmptyDes": "Tokens will appear here ",
   "crossFee": "Fee (export + import)",
   "crossId": "ID:",
   "crossStatus": "Status:",
@@ -201,6 +205,8 @@
   "earnTotalRewards": "Total Rewards",
   "earnDelegation": "Delegation",
   "earnValidatorAddress": "Validator Address ",
+  "earnEstimateRewardsEmpty": "Empty Estimate Rewards",
+  "earnEstimateRewardsEmptyDes": "Rewards will appear here",
   "nftMint": "Mint",
   "nftNewFamily": "New Family",
   "nftNewFamilyDesc": "Create a new set of collectibles with a name and symbol.",
