--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -21,6 +21,8 @@
   "sharedCopy": "Copy",
   "sharedShare": "Share",
   "sharedTotal": "Total",
+  "sharedGeneric": "Generic",
+  "sharedCustom": "Custom",
   "sharedTransactionFee": "Transaction fee",
   "sharedSetAmount": "Set amount",
   "sharedSendTo": "Send to",
@@ -92,6 +94,10 @@
   "sharedTryAgain": "Please try again",
   "sharedCompleteBiometrics": "Please complete the biometrics to proceed.",
   "sharedNext": "Next",
+  "sharedTitle": "Title",
+  "sharedType": "Type",
+  "sharedQuantity": "Quantity",
+  "sharedDescription": "Description",
   "sharedNoResultFound": "No result found",
   "sharedNoResultFoundDes": "We can’t find any item matching your search",
   "onBoardCreateWallet": "Create Wallet",
@@ -215,8 +221,15 @@
   "nftCreateFamily": "Create Family",
   "nftName": "Name",
   "nftSymbol": "Symbol",
+  "nftAboutCollectible": "About collectible",
+  "nftImageUrl": "Image URL",
+  "nftChooseTitle": "Choose tittle",
   "nftNumberOfGroups": "Number of Groups",
+  "nftHttps": "https://",
   "nftTxId": "TxID",
+  "nftUtf8": "UTF-8",
+  "nftUrl": "URL",
+  "nftJson": "JSON",
   "nftStartDate": "Start Date",
   "nftStartDateDesc": "Sart at least 5 minutes after you submit this form.",
   "nftFamilyName": "Family Name",
